--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
-email=info@acadalearning.com
+email=jjfaargo@gmail.com
 ###always-auth=true
-_auth=YWRtaW46YWRtaW4xMjM=
+_auth=ampmYWFyZ286RWQhbTBudDBuMjIxMTIx=
 allowRepublish=true
 #this is the encode
 #added
